--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
 
 <body>
 
-    <main>
-
-      <nav class="navbar navbar-expand-lg bg-body-tertiary shadow">
+    <header>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary shadow">
   <div class="container">
     <a class="navbar-brand" href="index.html"><img src="./assets/img/Logo-Glam-Sin-Fondo.png" style="width: 150px; height: 80px;" alt="Logo_GLAM"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,64 +52,134 @@
         <input class="form-control m-2" type="search" placeholder="Buscar producto..." aria-label="Search"/>
         <button class="btn btn-outline-success m-2" type="submit">BUSCAR</button>
         <button class="btn btn-outline-primar m-2 fs-5" data-bs-toggle="modal" data-bs-target="#authModal"><i class="bi bi-person"></i></button>
-        <button class="btn btn-outline-secondar m-2 fs-5" type="button" data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop" aria-controls="staticBackdrop"><i class="bi bi-cart4"></i></button>  
+        <button class="btn btn-outline-secondar m-2 fs-5" type="button" data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop" aria-controls="staticBackdrop"><i class="bi bi-cart4"></i></button>
+  
       </form>
     </div>
   </div>
-</nav>
- 
+        </nav>
+    </header>
 
-    <!-- Modal de Inicio de Sesión -->
-<div class="modal fade" id="authModal" tabindex="-1" aria-labelledby="authModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content shadow">
-      
-      <!-- Encabezado -->
-      <div class="modal-header bg-dark text-white">
-        <h5 class="modal-title" id="authModalLabel">Iniciar Sesión</h5>
-        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Cerrar"></button>
-      </div>
-
-      <!-- Cuerpo del modal -->
-      <div class="modal-body">
-        <form>
-          <div class="mb-3">
-            <label for="email" class="form-label">Correo electrónico</label>
-            <input type="email" class="form-control" id="email" placeholder="ejemplo@gmail.com" required>
-          </div>
-
-          <div class="mb-3">
-            <label for="password" class="form-label">Contraseña</label>
-            <input type="password" class="form-control" id="password" placeholder="••••••••" required>
-          </div>
-
-          <div class="d-flex justify-content-between align-items-center">
-            <div>
-              <input type="checkbox" id="remember">
-              <label for="remember">Recordarme</label>
-            </div>
-            <a href="#" class="text-decoration-none">¿Olvidaste tu contraseña?</a>
-          </div>
-
-          <div class="mt-4">
-            <button type="submit" class="btn btn-primary w-100">Iniciar Sesión</button>
-          </div>
-        </form>
-      </div>
-
-      <!-- Pie del modal -->
-      <div class="modal-footer">
-        <p class="text-center w-100 mb-0">¿No tenés cuenta? 
-          <a href="#" class="text-primary text-decoration-none">Registrate</a>
+    <!-- HERO -->
+<section class="hero d-flex align-items-center">
+  <div class="container">
+    <div class="row align-items-center">
+      <!-- Texto -->
+      <div class="col-12 col-lg-12 text-center text-light">
+        <h1 class="display-5 fw-bold mb-3">• GLAM •</h1>
+        <h2 class="display-5 fw-bold mb-3">Deportes que te mueven</h2>
+        <p class="lead mb-5">
+          Zapatillas, indumentaria y accesorios de alto rendimiento. Envíos a todo el país.
         </p>
-      </div>
+
+        <div class="d-flex justify-content-around">
+          <a href="#productos" class="btn btn-outline-light btn-lg d-flex align-items-center px-3">
+            <i class=""></i>👟Ver productos
+          </a>
+          <a href="#ofertas" class="btn btn-outline-light btn-lg d-flex align-items-center px-3">
+            <i class=""></i>⚡Ofertas de hoy
+          </a>
+        </div>
     </div>
   </div>
-</div>
+</section>
+
+<style>
+/* Fondo del hero: cambiá la imagen por la tuya */
+.hero{
+  min-height: 90vh;
+  background-image: url('./assets/img/accesorios/Reloj-2.png'); /* <-- tu imagen */
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  overflow: hidden;
+}
+
+
+
+
+</style>
+
+
+    <main>
 
     </main>
 
-</body>
+<!-- Modal Login / Registro -->
+        <div class="modal fade" id="authModal" tabindex="-1" aria-labelledby="authModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content shadow">
+    
+      <div class="modal-header bg-dark text-white">
+        <h5 class="modal-title" id="authModalLabel">Mi cuenta</h5>
+        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+      </div>
+
+      <div class="modal-body">
+        <!-- Nav Tabs -->
+        <ul class="nav nav-tabs mb-3 justify-content-center" id="authTabs" role="tablist">
+          <li class="nav-item" role="presentation">
+            <button class="nav-link active" id="login-tab" data-bs-toggle="tab" data-bs-target="#login" type="button" role="tab" aria-controls="login" aria-selected="true">
+              Iniciar Sesión
+            </button>
+          </li>
+          <li class="nav-item" role="presentation">
+            <button class="nav-link" id="register-tab" data-bs-toggle="tab" data-bs-target="#register" type="button" role="tab" aria-controls="register" aria-selected="false">
+              Registrarse
+            </button>
+          </li>
+        </ul>
+
+        <!-- Contenido de las pestañas -->
+        <div class="tab-content" id="authTabsContent">
+          <!-- Pestaña Login -->
+          <div class="tab-pane fade show active" id="login" role="tabpanel" aria-labelledby="login-tab">
+            <form>
+              <div class="mb-3">
+                <label class="form-label">Correo electrónico</label>
+                <input type="email" class="form-control" placeholder="ejemplo@gmail.com" required>
+              </div>
+              <div class="mb-3">
+                <label class="form-label">Contraseña</label>
+                <input type="password" class="form-control" placeholder="••••••••" required>
+              </div>
+              <div class="d-flex justify-content-between align-items-center">
+                <div>
+                  <input type="checkbox" id="remember">
+                  <label for="remember">Recordarme</label>
+                </div>
+                <a href="#" class="text-decoration-none">¿Olvidaste tu contraseña?</a>
+              </div>
+              <button type="submit" class="btn btn-primary w-100 mt-3">Iniciar Sesión</button>
+            </form>
+          </div>
+
+          <!-- Pestaña Registro -->
+          <div class="tab-pane fade" id="register" role="tabpanel" aria-labelledby="register-tab">
+            <form>
+              <div class="mb-3">
+                <label class="form-label">Nombre completo</label>
+                <input type="text" class="form-control" placeholder="Tu nombre" required>
+              </div>
+              <div class="mb-3">
+                <label class="form-label">Correo electrónico</label>
+                <input type="email" class="form-control" placeholder="ejemplo@gmail.com" required>
+              </div>
+              <div class="mb-3">
+                <label class="form-label">Contraseña</label>
+                <input type="password" class="form-control" placeholder="Crea una contraseña" required>
+              </div>
+              <button type="submit" class="btn btn-success w-100 mt-3">Registrarme</button>
+            </form>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+        </div>
+    </body>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
