--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <meta name="description" content="En GLAM encontraras la mejor ropa deportiva: remeras, shorts, camperas, calzado. Moda, confort y rendimiento en un solo lugar">
+    <meta name="description"
+        content="En GLAM encontraras la mejor ropa deportiva: remeras, shorts, camperas, calzado. Moda, confort y rendimiento en un solo lugar">
     <meta name="keywords" content="Zapatillas, Busos, Camisetas, Short, Camperas, Moda, Confort, Elegancia">
     <meta name="author" content="Gonzalo Tabares, Leandro Blanca, Abel Ruiz, Mauro Seu">
 </head>
@@ -20,13 +21,25 @@
     <main>
 
 
-        
+
     </main>
+
+    <footer>
+        <div class="conteiner-fluid row ps-5">
+            <div class="d-flex justify-content-center">
+                <a href="index.html" class="text-center">
+                    <img src="assets/img/Logo-Glam.png" alt="Logo Glam"
+                        class="rounded-circle col-3 col-md-1 col-lg-1 p-1 my-4 img-fluid">
+                </a>
+            </div>
+        </div>
+    </footer>
 
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
     crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/362f238c3f.js" crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/362f238c3f.js" crossorigin="anonymous"></script>
+
 </html>
