Agrego primer columna en el footer

--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
                 </a>
             </div>
         </div>
+        <div class="row text-center">
+            <div>
+                <a href="index.html">Inicio</a><br>
+                <a href="pages/contacto.html">Contacto</a><br>
+                <a href="pages/nosotros.html">Nosotros</a><br>
+                <a href="#">Términos y condiciones</a><br>
+            </div>
+        </div>
     </footer>
 
 </body>
