--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
                 <a href="pages/nosotros.html">Nosotros</a><br>
                 <a href="#">Términos y condiciones</a><br>
             </div>
+            <div>
+                <a href="pages/inicio-sesion.html">Iniciar sesion</a><br>
+                <a href="pages/registro.html">Registrarse</a><br>
+                <a href="#">Info@glam.com</a><br>
+                <a href="index.html">Solo en Glam</a><br>
+            </div>
         </div>
     </footer>
 
