Agrego tercera columna al footer

--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
                 <a href="#">Info@glam.com</a><br>
                 <a href="index.html">Solo en Glam</a><br>
             </div>
+            <div>
+                <a href="#">Como comprar</a><br>
+                <a href="#">Tabla de talles</a><br>
+                <a href="#">Sucursales</a><br>
+                <a href="#">Metodos de pago</a><br>
+            </div>
         </div>
     </footer>
 
