Agrego cuarta columna al footer

--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
                 <a href="#">Sucursales</a><br>
                 <a href="#">Metodos de pago</a><br>
             </div>
+            <div>
+                <a href="#">Envios</a><br>
+                <a href="#">Privacidad</a><br>
+                <a href="#">Tienda</a><br>
+                <a href="#">Cambios y devoluciones</a>
+            </div>
         </div>
     </footer>
 
