--- a/index.html
+++ b/index.html
@@ -34,25 +34,25 @@
             </div>
         </div>
         <div class="row text-center">
-            <div>
+            <div class="col-12 col-md-6 col-lg-3 px-5">
                 <a href="index.html">Inicio</a><br>
                 <a href="pages/contacto.html">Contacto</a><br>
                 <a href="pages/nosotros.html">Nosotros</a><br>
                 <a href="#">Términos y condiciones</a><br>
             </div>
-            <div>
+            <div class="col-12 col-md-6 col-lg-3 px-5">
                 <a href="pages/inicio-sesion.html">Iniciar sesion</a><br>
                 <a href="pages/registro.html">Registrarse</a><br>
                 <a href="#">Info@glam.com</a><br>
                 <a href="index.html">Solo en Glam</a><br>
             </div>
-            <div>
+            <div class="col-12 col-md-6 col-lg-3 px-5">
                 <a href="#">Como comprar</a><br>
                 <a href="#">Tabla de talles</a><br>
                 <a href="#">Sucursales</a><br>
                 <a href="#">Metodos de pago</a><br>
             </div>
-            <div>
+            <div class="col-12 col-md-6 col-lg-3 px-5">
                 <a href="#">Envios</a><br>
                 <a href="#">Privacidad</a><br>
                 <a href="#">Tienda</a><br>
