Agrego el copyrigth al footer

--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
                 <a href="#">Tienda</a><br>
                 <a href="#">Cambios y devoluciones</a>
             </div>
+            <div>
+                <p>© Glam Todos los Derechos Reservados - 2025</p>
+            </div>
         </div>
     </footer>
 
