--- a/index.html
+++ b/index.html
@@ -58,9 +58,8 @@
                 <a href="#">Tienda</a><br>
                 <a href="#">Cambios y devoluciones</a>
             </div>
-            <div>
-                <p>© Glam Todos los Derechos Reservados - 2025</p>
-            </div>
+                <p class="p-5">© Glam Todos los Derechos Reservados - 2025</p>
+                <hr>
         </div>
     </footer>
 
