Agrego iconos de tarjetas

--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
             </div>
                 <p class="p-5">© Glam Todos los Derechos Reservados - 2025</p>
                 <hr>
+                <div class="d-flex justify-content-center gap-3 mb-4">
+                    <i class="fa-brands fa-cc-visa fa-2x"></i>
+                    <i class="fa-brands fa-cc-mastercard fa-2x"></i>
+                    <i class="fa-brands fa-cc-paypal fa-2x"></i>
+                    <i class="fa-brands fa-cc-discover fa-2x"></i>
+                </div>
         </div>
     </footer>
 
