puse clases a todos las etiquetas (a) y cambie su color a blanco

--- a/index.html
+++ b/index.html
@@ -34,28 +34,28 @@
             </div>
             <div class="row text-center">
                 <div class="col-12 col-md-6 col-lg-3 px-5">
-                    <a href="index.html">Inicio</a><br>
-                    <a href="pages/contacto.html">Contacto</a><br>
-                    <a href="pages/nosotros.html">Nosotros</a><br>
-                    <a href="#">Términos y condiciones</a><br>
+                    <a class="texto-footer" href="index.html">Inicio</a><br>
+                    <a class="texto-footer" href="pages/contacto.html">Contacto</a><br>
+                    <a class="texto-footer" href="pages/nosotros.html">Nosotros</a><br>
+                    <a class="texto-footer" href="#">Términos y condiciones</a><br>
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 px-5">
-                    <a href="pages/inicio-sesion.html">Iniciar sesion</a><br>
-                    <a href="pages/registro.html">Registrarse</a><br>
-                    <a href="#">Info@glam.com</a><br>
-                    <a href="index.html">Solo en Glam</a><br>
+                    <a class="texto-footer" href="pages/inicio-sesion.html">Iniciar sesion</a><br>
+                    <a class="texto-footer" href="pages/registro.html">Registrarse</a><br>
+                    <a class="texto-footer" href="#">Info@glam.com</a><br>
+                    <a class="texto-footer" href="index.html">Solo en Glam</a><br>
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 px-5">
-                    <a href="#">Como comprar</a><br>
-                    <a href="#">Tabla de talles</a><br>
-                    <a href="#">Sucursales</a><br>
-                    <a href="#">Metodos de pago</a><br>
+                    <a class="texto-footer" href="#">Como comprar</a><br>
+                    <a class="texto-footer" href="#">Tabla de talles</a><br>
+                    <a class="texto-footer" href="#">Sucursales</a><br>
+                    <a class="texto-footer" href="#">Metodos de pago</a><br>
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 px-5">
-                    <a href="#">Envios</a><br>
-                    <a href="#">Privacidad</a><br>
-                    <a href="#">Tienda</a><br>
-                    <a href="#">Cambios y devoluciones</a>
+                    <a class="texto-footer" href="#">Envios</a><br>
+                    <a class="texto-footer" href="#">Privacidad</a><br>
+                    <a class="texto-footer" href="#">Tienda</a><br>
+                    <a class="texto-footer" href="#">Cambios y devoluciones</a>
                 </div>
             <p class="p-5">© Glam Todos los Derechos Reservados - 2025</p>
             <hr>
