Cambio el color de todo el footer a negro

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     </main>
 
-    <footer>
+    <footer style="background-color: black;">
         <div class="conteiner-fluid row ps-5">
             <div class="d-flex justify-content-center">
                 <a href="index.html" class="text-center">
