--- a/index.html
+++ b/index.html
@@ -27,81 +27,82 @@
                     <div class="carousel-item active">
                         <div class="card-wrapper">
                             <div class="card" style="width: 18rem;">
-                                <img src="..." class="card-img-top" alt="...">
+                                <img src="/assets/img/zapatillas/Zapatillas-Nike-1.png" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
-                                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                                    <a href="#" class="btn btn-secondary d-flex justify-content-center">Nike Air Force 1 '07 EasyOn</a>
                                 </div>
+                            </div>
+                        </div>
+                        <div class="card" style="width: 18rem;">
+                            <img src="/assets/img/zapatillas/Zapatillas-Nike-2.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <a href="#" class="btn btn-secondary d-flex justify-content-center">Nike Air Force 1 - Full Black</a>
+                            </div>
+                        </div>
+                        <div class="card" style="width: 18rem;">
+                            <img src="/assets/img/zapatillas/Zapatillas-Nike-3.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <a href="#" class="btn btn-secondary d-flex justify-content-center">Nike Air Force 1 - "Carrie"</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="carousel-item">
+                        <div class="card-wrapper">
+                            <div class="card" style="width: 18rem;">
+                                <img src="/assets/img/zapatillas/Zapatillas-Adidas-1.png" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <a href="#" class="btn btn-secondary d-flex justify-content-center">Go somewhere</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card" style="width: 18rem;">
+                            <img src="/assets/img/zapatillas/Zapatillas-Adidas-2.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <a href="#" class="btn btn-secondary d-flex justify-content-center">Go somewhere</a>
+                            </div>
+                        </div>
+                        <div class="card" style="width: 18rem;">
+                            <img src="/assets/img/zapatillas/Zapatillas-Adidas-3.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <a href="#" class="btn btn-secondary d-flex justify-content-center">Go somewhere</a>
                             </div>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="card-wrapper">
                             <div class="card" style="width: 18rem;">
-                                <img src="..." class="card-img-top" alt="...">
+                                <img src="/assets/img/zapatillas/Zapatillas-Puma-1.png" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>                                
-                                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                                    <a href="#" class="btn btn-secondary d-flex justify-content-center">Go somewhere</a>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="card-wrapper">
-                            <div class="card" style="width: 18rem;">
-                                <img src="..." class="card-img-top" alt="...">
-                                <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
-                                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                                </div>
+                        <div class="card" style="width: 18rem;">
+                            <img src="/assets/img/zapatillas/Zapatillas-Puma-2.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <a href="#" class="btn btn-secondary d-flex justify-content-center">Go somewhere</a>
+                            </div>
+                        </div>
+                        <div class="card" style="width: 18rem;">
+                            <img src="/assets/img/zapatillas/Zapatillas-Puma-3.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <a href="#" class="btn btn-secondary d-flex justify-content-center">Go somewhere</a>
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item">
-                        <div class="card-wrapper">
-                            <div class="card" style="width: 18rem;">
-                                <img src="..." class="card-img-top" alt="...">
-                                <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
-                                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="card-wrapper">
-                            <div class="card" style="width: 18rem;">
-                                <img src="..." class="card-img-top" alt="...">
-                                <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
-                                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="card-wrapper">
-                            <div class="card" style="width: 18rem;">
-                                <img src="..." class="card-img-top" alt="...">
-                                <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
-                                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
-            </div>
         </section>
     </main>
 
