Se modifico estructura del carrusel con las imagenes y se agrego contenido a las cards

--- a/index.html
+++ b/index.html
@@ -25,69 +25,85 @@
             <div id="carouselExample" class="carousel slide">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <div class="card-wrapper">
-                            <div class="card" style="width: 18rem;">
+                        <div class="cards-wrapper">
+                            <div class="card1" style="width: 18rem;">
                                 <img src="/assets/img/zapatillas/Zapatillas-Nike-1.png" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <a href="#" class="btn btn-secondary d-flex justify-content-center">Nike Air Force 1 '07 EasyOn</a>
+                                    <a href="#" class="btn btn-secondary d-flex justify-content-center">Nike Air Force 1
+                                        '07 EasyOn</a>
                                 </div>
                             </div>
-                        </div>
-                        <div class="card" style="width: 18rem;">
-                            <img src="/assets/img/zapatillas/Zapatillas-Nike-2.png" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <a href="#" class="btn btn-secondary d-flex justify-content-center">Nike Air Force 1 - Full Black</a>
+                            <div class="card1" style="width: 18rem;">
+                                <img src="/assets/img/zapatillas/Zapatillas-Nike-2.png" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <a href="#" class="btn btn-secondary d-flex justify-content-center">Nike Air Force 1
+                                        -
+                                        Full Black</a>
+                                </div>
                             </div>
-                        </div>
-                        <div class="card" style="width: 18rem;">
-                            <img src="/assets/img/zapatillas/Zapatillas-Nike-3.png" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <a href="#" class="btn btn-secondary d-flex justify-content-center">Nike Air Force 1 - "Carrie"</a>
+                            <div class="card1" style="width: 18rem;">
+                                <img src="/assets/img/zapatillas/Zapatillas-Nike-3.png" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <a href="#" class="btn btn-secondary d-flex justify-content-center">Nike Air Force 1
+                                        -
+                                        "Carrie"</a>
+                                </div>
                             </div>
                         </div>
                     </div>
 
                     <div class="carousel-item">
-                        <div class="card-wrapper">
-                            <div class="card" style="width: 18rem;">
-                                <img src="/assets/img/zapatillas/Zapatillas-Adidas-1.png" class="card-img-top" alt="...">
+                        <div class="cards-wrapper">
+                            <div class="card1" style="width: 18rem;">
+                                <img src="/assets/img/zapatillas/Zapatillas-Adidas-1.png" class="card-img-top"
+                                    alt="...">
                                 <div class="card-body">
-                                    <a href="#" class="btn btn-secondary d-flex justify-content-center">Go somewhere</a>
+                                    <a href="#" class="btn btn-secondary d-flex justify-content-center">Adidas Forum Low
+                                        - Green</a>
                                 </div>
                             </div>
-                        </div>
-                        <div class="card" style="width: 18rem;">
-                            <img src="/assets/img/zapatillas/Zapatillas-Adidas-2.png" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <a href="#" class="btn btn-secondary d-flex justify-content-center">Go somewhere</a>
+                            <div class="card1" style="width: 18rem;">
+                                <img src="/assets/img/zapatillas/Zapatillas-Adidas-2.png" class="card-img-top"
+                                    alt="...">
+                                <div class="card-body">
+                                    <a href="#" class="btn btn-secondary d-flex justify-content-center">Adidas Forum Low
+                                        -
+                                        Coffee</a>
+                                </div>
                             </div>
-                        </div>
-                        <div class="card" style="width: 18rem;">
-                            <img src="/assets/img/zapatillas/Zapatillas-Adidas-3.png" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <a href="#" class="btn btn-secondary d-flex justify-content-center">Go somewhere</a>
+                            <div class="card1" style="width: 18rem;">
+                                <img src="/assets/img/zapatillas/Zapatillas-Adidas-3.png" class="card-img-top"
+                                    alt="...">
+                                <div class="card-body">
+                                    <a href="#" class="btn btn-secondary d-flex justify-content-center">Adidas Forum Low
+                                        -
+                                        Total White</a>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <div class="card-wrapper">
-                            <div class="card" style="width: 18rem;">
+                        <div class="cards-wrapper">
+                            <div class="card1" style="width: 18rem;">
                                 <img src="/assets/img/zapatillas/Zapatillas-Puma-1.png" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <a href="#" class="btn btn-secondary d-flex justify-content-center">Go somewhere</a>
+                                    <a href="#" class="btn btn-secondary d-flex justify-content-center">Puma Suede XL -
+                                        Black</a>
                                 </div>
                             </div>
-                        </div>
-                        <div class="card" style="width: 18rem;">
-                            <img src="/assets/img/zapatillas/Zapatillas-Puma-2.png" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <a href="#" class="btn btn-secondary d-flex justify-content-center">Go somewhere</a>
+                            <div class="card1" style="width: 18rem;">
+                                <img src="/assets/img/zapatillas/Zapatillas-Puma-2.png" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <a href="#" class="btn btn-secondary d-flex justify-content-center">Puma Suede Xl -
+                                        Red</a>
+                                </div>
                             </div>
-                        </div>
-                        <div class="card" style="width: 18rem;">
-                            <img src="/assets/img/zapatillas/Zapatillas-Puma-3.png" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <a href="#" class="btn btn-secondary d-flex justify-content-center">Go somewhere</a>
+                            <div class="card1" style="width: 18rem;">
+                                <img src="/assets/img/zapatillas/Zapatillas-Puma-3.png" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <a href="#" class="btn btn-secondary d-flex justify-content-center">Puma Suede XL -
+                                        "Grinch"</a>
+                                </div>
                             </div>
                         </div>
                     </div>
