--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </main>
 
     <footer style="background-color: black;">
-        <div class="conteiner-fluid row ps-5">
+        <div class="container-fluid">
             <div class="d-flex justify-content-center">
                 <a href="index.html" class="text-center">
                     <img src="assets/img/Logo-Glam.png" alt="Logo Glam"
@@ -60,7 +60,7 @@
             <p class="p-5">© Glam Todos los Derechos Reservados - 2025</p>
             <hr>
             </div>
-            <div class="d-flex justify-content-center gap-3 mb-4">
+            <div class="d-flex justify-content-center gap-3 pb-4">
                 <i class="fa-brands fa-cc-visa fa-2x"></i>
                 <i class="fa-brands fa-cc-mastercard fa-2x"></i>
                 <i class="fa-brands fa-cc-paypal fa-2x"></i>
