--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
             <hr>
             </div>
             <div class="d-flex justify-content-center gap-3 pb-4">
-                <i class="fa-brands fa-cc-visa fa-2x"></i>
-                <i class="fa-brands fa-cc-mastercard fa-2x"></i>
-                <i class="fa-brands fa-cc-paypal fa-2x"></i>
-                <i class="fa-brands fa-cc-discover fa-2x"></i>
+                <i class="Visa fa-brands fa-cc-visa fa-2x"></i>
+                <i class="Mastercard fa-brands fa-cc-mastercard fa-2x"></i>
+                <i class="Paypal fa-brands fa-cc-paypal fa-2x"></i>
+                <i class="Discover fa-brands fa-cc-discover fa-2x"></i>
             </div>
         </div>
     </footer>
