Enruto todas las imagenes

--- a/index.html
+++ b/index.html
@@ -22,22 +22,22 @@
             <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="assets/img/" class="d-block w-100" alt="...">
+                    <img src="assets/img/carrousel/Just-Do-It.jpg" class="d-block w-100" alt="Just Do It">
                 </div>
                 <div class="carousel-item">
-                    <img src="assets/img/" class="d-block w-100" alt="...">
+                    <img src="assets/img/carrousel/Authentic.jpg" class="d-block w-100" alt="Authentic">
                 </div>
                 <div class="carousel-item">
-                    <img src="assets/img/" class="d-block w-100" alt="...">
+                    <img src="assets/img/carrousel/Busos.jpg" class="d-block w-100" alt="Portada Buzos">
                 </div>
                 <div class="carousel-item">
-                    <img src="assets/img/" class="d-block w-100" alt="...">
+                    <img src="assets/img/carrousel/Camperas-Retros.jpg" class="d-block w-100" alt="Camperas Retros">
                 </div>
                 <div class="carousel-item">
-                    <img src="assets/img/" class="d-block w-100" alt="...">
+                    <img src="assets/img/carrousel/Remeras-Overzide.jpg" class="d-block w-100" alt="Remeras Overzide">
                 </div>
                 <div class="carousel-item">
-                    <img src="assets/img/" class="d-block w-100" alt="...">
+                    <img src="assets/img/carrousel/The-North-Face.jpg" class="d-block w-100" alt="The North Face">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
