--- a/index.html
+++ b/index.html
@@ -62,71 +62,15 @@
   </div>
         </nav>
     </header>
-
-    <section>
-        <img src="./assets/img/hero_01.png" class="img-fluid" alt="">
-    </section>
-
+    
     <!-- HERO -->
-    <section class="hero d-flex align-items-center justify-content-center text-center text-light">
-  <div class="container position-relative">
-    <div class="row align-items-center">
-      <div class="col-12 col-lg-12">
-
-        <!-- Fondo (imagen) -->
-        <img src="./assets/img/hero_01.png" alt="Hero GLAM" class="hero-img">
-
-        <!-- Contenido sobre la imagen -->
-        <div class="hero-content position-absolute top-50 start-50 translate-middle w-100 px-3">
-          <h1 class="display-5 fw-bold mb-4">• GLAM •</h1>
-          <h2 class="display-6 fw-bold mb-4">Deportes que te mueven</h2>
-          <p class="lead mb-5">
-            Zapatillas, indumentaria y accesorios de alto rendimiento. Envíos a todo el país.
-          </p>
-          <div class="d-flex justify-content-center gap-3 flex-wrap">
-            <a href="#productos" class="btn btn-outline-light btn-lg">👟 Ver productos</a>
-            <a href="#ofertas" class="btn btn-outline-light btn-lg">⚡ Ofertas de hoy</a>
-          </div>
-        </div>
-
-      </div>
-    </div>
-  </div>
-</section>
-
-<style>
-.hero {
-  position: relative;
-  width: 100%;
-  height: 90vh; /* altura visible */
-  overflow: hidden;
-}
-
-.hero-img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;      /* rellena sin deformarse */
-  filter: brightness(0.5); /* oscurece para mejorar contraste del texto */
-  z-index: 1;
-}
-
-.hero-content {
-  z-index: 2; /* encima de la imagen */
-}
-
-@media (max-width: 768px) {
-  .hero {
-    height: 70vh;
-  }
-  .hero-content h1, .hero-content h2 {
-    font-size: 1.8rem;
-  }
-}
-</style>
-
+     <section class="card">
+      <img src="./assets/img/hero_01.png" alt="imagen_portada" class="img-fluid">
+      <h1 class="title_1">• GLAM •</h1>
+       <h2 class="display-6 fw-bold mb-4 title_2">Deportes que te mueven</h2>
+       <p class="lead mb-5 title_3">
+      Zapatillas, indumentaria y accesorios de alto rendimiento. Envíos a todo el país.</p>
+    </section>
 
     <main>
 
