Agrego 2 botones al hero. (Ver producto )y (Ofertas de hoy).

--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@
        <h2 class="display-6 fw-bold mb-4 title_2">Deportes que te mueven</h2>
        <p class="lead mb-5 title_3">
       Zapatillas, indumentaria y accesorios de alto rendimiento. Envíos a todo el país.</p>
+
+       <div class="hero-buttons">
+    <a href="#productos" class="btn btn-outline-light btn-lg">👟 Ver productos</a>
+    <a href="#ofertas" class="btn btn-outline-light btn-lg">⚡ Ofertas de hoy</a>
+  </div>
     </section>
 
     <main>
