--- a/index.html
+++ b/index.html
@@ -25,27 +25,25 @@
             <div id="carouselExample" class="carousel slide">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
+                        <h2 class="d-flex justify-content-center">Nuestros Iconos Obsolutos</h2>
                         <div class="cards-wrapper">
-                            <div class="card1" style="width: 18rem;">
-                                <img src="/assets/img/zapatillas/Zapatillas-Nike-1.png" class="card-img-top" alt="...">
+                            <div class="card1">
+                                <img src="/assets/img/zapatillas/Zapatillas-Nike-1.png" class="card-img-top" alt="Nike Air Force 1 White">
                                 <div class="card-body">
-                                    <a href="#" class="btn btn-secondary d-flex justify-content-center">Nike Air Force 1
+                                    <a href="#" class="btn btn-primary d-flex justify-content-center">Nike Air Force 1
                                         '07 EasyOn</a>
                                 </div>
                             </div>
-                            <div class="card1" style="width: 18rem;">
-                                <img src="/assets/img/zapatillas/Zapatillas-Nike-2.png" class="card-img-top" alt="...">
+                            <div class="card1">
+                                <img src="/assets/img/zapatillas/Zapatillas-Nike-2.png" class="card-img-top" alt="Nike Air Force Black">
                                 <div class="card-body">
-                                    <a href="#" class="btn btn-secondary d-flex justify-content-center">Nike Air Force 1
-                                        -
-                                        Full Black</a>
+                                    <a href="#" class="btn btn-primary d-flex justify-content-center">Nike Air Force 1 Total Black</a>
                                 </div>
                             </div>
-                            <div class="card1" style="width: 18rem;">
-                                <img src="/assets/img/zapatillas/Zapatillas-Nike-3.png" class="card-img-top" alt="...">
+                            <div class="card1">
+                                <img src="/assets/img/zapatillas/Zapatillas-Nike-3.png" class="card-img-top" alt="">
                                 <div class="card-body">
-                                    <a href="#" class="btn btn-secondary d-flex justify-content-center">Nike Air Force 1
-                                        -
+                                    <a href="#" class="btn btn-primary d-flex justify-content-center">Nike Air Force 1
                                         "Carrie"</a>
                                 </div>
                             </div>
@@ -53,55 +51,55 @@
                     </div>
 
                     <div class="carousel-item">
+                        <h2 class="d-flex justify-content-center">Marcando Tendencias</h2>
                         <div class="cards-wrapper">
-                            <div class="card1" style="width: 18rem;">
+                            <div class="card1">
                                 <img src="/assets/img/zapatillas/Zapatillas-Adidas-1.png" class="card-img-top"
                                     alt="...">
                                 <div class="card-body">
-                                    <a href="#" class="btn btn-secondary d-flex justify-content-center">Adidas Forum Low
-                                        - Green</a>
+                                    <a href="#" class="btn btn-primary d-flex justify-content-center ">Adidas Forum Low
+                                        Green</a>
                                 </div>
                             </div>
-                            <div class="card1" style="width: 18rem;">
+                            <div class="card1">
                                 <img src="/assets/img/zapatillas/Zapatillas-Adidas-2.png" class="card-img-top"
                                     alt="...">
                                 <div class="card-body">
-                                    <a href="#" class="btn btn-secondary d-flex justify-content-center">Adidas Forum Low
-                                        -
+                                    <a href="#" class="btn btn-primary d-flex justify-content-center">Adidas Forum
                                         Coffee</a>
                                 </div>
                             </div>
-                            <div class="card1" style="width: 18rem;">
+                            <div class="card1">
                                 <img src="/assets/img/zapatillas/Zapatillas-Adidas-3.png" class="card-img-top"
                                     alt="...">
                                 <div class="card-body">
-                                    <a href="#" class="btn btn-secondary d-flex justify-content-center">Adidas Forum Low
-                                        -
+                                    <a href="#" class="btn btn-primary d-flex justify-content-center">Adidas Forum Low
                                         Total White</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="carousel-item">
+                        <h2 class="d-flex justify-content-center">Estilo Unicos</h2>
                         <div class="cards-wrapper">
-                            <div class="card1" style="width: 18rem;">
+                            <div class="card1">
                                 <img src="/assets/img/zapatillas/Zapatillas-Puma-1.png" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <a href="#" class="btn btn-secondary d-flex justify-content-center">Puma Suede XL -
+                                    <a href="#" class="btn btn-primary d-flex justify-content-center">Puma Suede XL
                                         Black</a>
                                 </div>
                             </div>
-                            <div class="card1" style="width: 18rem;">
+                            <div class="card1">
                                 <img src="/assets/img/zapatillas/Zapatillas-Puma-2.png" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <a href="#" class="btn btn-secondary d-flex justify-content-center">Puma Suede Xl -
+                                    <a href="#" class="btn btn-primary d-flex justify-content-center">Puma Suede Xl
                                         Red</a>
                                 </div>
                             </div>
-                            <div class="card1" style="width: 18rem;">
+                            <div class="card1">
                                 <img src="/assets/img/zapatillas/Zapatillas-Puma-3.png" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <a href="#" class="btn btn-secondary d-flex justify-content-center">Puma Suede XL -
+                                    <a href="#" class="btn btn-primary data-bs-toggle-modal d-flex justify-content-center">Puma Suede XL
                                         "Grinch"</a>
                                 </div>
                             </div>
