Agrego colores de los buzos y precios

--- a/pages/detalles-de-producto/busos/buso-2.html
+++ b/pages/detalles-de-producto/busos/buso-2.html
@@ -59,6 +59,14 @@
             <div class="col-12 col-md-6 col-lg-6 px-5">
                 <h2 class="text-center mt-5">Buzo Basico</h2>
                 <hr>
+                <li>
+                    <h4>Buzo 100% algodon</h4>
+                </li>
+                <li>
+                    <h4>Color: Gris / Celeste / Negro / Beige</h4>
+                </li>
+                <p class="Precio-Antiguo text-decoration-line-through fs-5">$60.000</p>
+                <h3 class="Precio fw-bold fs-2">$40.000</h3>
             </div>
         </div>
     </main>
