Agrego boton de comprar

--- a/pages/detalles-de-producto/busos/buso-2.html
+++ b/pages/detalles-de-producto/busos/buso-2.html
@@ -74,6 +74,9 @@
                     <div class="Talles border rounded text-center p-1" style="width: 40px;">3</div>
                     <div class="Talles border rounded text-center p-1" style="width: 40px;">4</div>
                 </div>
+                <button class="Carrito container-fluid p-2 rounded bg-success">
+                    <h4>Comprar</h4>
+                </button>   
             </div>
         </div>
     </main>
